--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
-  "name": "my-react-router-app",
+  "name": "my-first-app",
+  "homepage": "https://abdu11ahfa1zan.github.io/my-first-app",
   "private": true,
   "type": "module",
   "scripts": {
     "build": "react-router build",
     "dev": "react-router dev",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-router-serve ./build/server/index.js",
     "typecheck": "react-router typegen && tsc"
   },
@@ -22,6 +25,7 @@
     "@types/node": "^20",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
+    "gh-pages": "^6.3.0",
     "tailwindcss": "^4.1.4",
     "typescript": "^5.8.3",
     "vite": "^6.3.3",
