--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "my-first-app",
-  "homepage": "https://abdu11ahfa1zan.github.io/my-first-app",
+  "homepage": "https://abdu11ahfa1zan.github.io/my-first-app/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
